<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/cl_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/cl_title_text"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/cl_product_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/cl_productID"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintWidth_min="200dp"
    app:layout_constraintTop_toBottomOf="@id/cl_title"
    android:inputType="text"
    android:autofillHints=""/>

  <CheckBox
    android:id="@+id/cb_special"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/cb_special_text"
    app:layout_constraintLeft_toRightOf="@id/cl_product_id"
    app:layout_constraintStart_toEndOf="@id/cl_product_id"
    app:layout_constraintTop_toBottomOf="@id/cl_title"/>

  <EditText
    android:id="@+id/cl_amount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/cl_amount_text"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintWidth_min="200dp"
    app:layout_constraintTop_toBottomOf="@id/cl_product_id"
    android:autofillHints=""
    android:inputType="number"/>

  <Button
    android:id="@+id/buttonIncViewModel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/cl_button_vm_text"
    app:layout_constraintEnd_toStartOf="@id/buttonIncFragment"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cl_amount"/>

  <Button
    android:id="@+id/buttonIncFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/cl_button_frag_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/buttonIncViewModel"
    app:layout_constraintTop_toBottomOf="@id/cl_amount"/>
</androidx.constraintlayout.widget.ConstraintLayout>